# mc-cli

./: Cargo.toml  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: release.yml
src/: cli.rs  java.rs  main.rs  server.rs  tui.rs
src/provider/: fabric.rs  mod.rs  paper.rs  vanilla.rs
