[package]
name = "mc-cli"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha2 = "0.11.0"
sysinfo = "0.38.4"
tokio = { version = "1.51.1", features = ["full"] }
